index.html Extraction from src Folder

--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
           <div id="back-button">GO BACK</div>
       </div>
 
-      <script type="module" src="./index.js"></script>
+      <script type="module" src="src/index.js"></script>
     </body>
 </html>
