href game over/won fix

--- a/src/game.html
+++ b/src/game.html
@@ -36,7 +36,7 @@
             <h1 id="game-over" class="main-title">GAME OVER</h1>
             <div
                 class="start-button-container"
-                onclick='window.location.href = "index.html"'
+                onclick='window.location.href = "../index.html"'
             >
                 <h2 class="start-button">Try again!</h2>
             </div>
@@ -46,7 +46,7 @@
             <h1 id="game-won" class="main-title">YOU WON</h1>
             <div
                 class="start-button-container"
-                onclick='window.location.href = "index.html"'
+                onclick='window.location.href = "../index.html"'
             >
                 <h2 class="start-button">Play again!</h2>
             </div>
